k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rig
  namespace: rig
spec:
  selector:
    app: rig
  ports:
    - port: 8000
      targetPort: 8000
